--- a/assets/css/user-alerts.css
+++ b/assets/css/user-alerts.css
@@ -44,7 +44,7 @@ table.wp-user-alerts .alert-severity-notice {
 	color: skyblue;
 }
 table.wp-user-alerts .alert-severity-warning {
-	color: lightgray;
+	color: burlywood;
 }
 table.wp-user-alerts .alert-severity-error {
 	color: red;
