--- a/assets/css/user-alerts.css
+++ b/assets/css/user-alerts.css
@@ -38,23 +38,73 @@ table.wp-user-alerts .alerts-picker label {
 }
 
 table.wp-user-alerts .alert-severity-info {
-	color: limegreen;
+	color: #2185d0;
 }
 table.wp-user-alerts .alert-severity-notice {
-	color: skyblue;
+	color: #1ebc30;
 }
 table.wp-user-alerts .alert-severity-warning {
-	color: burlywood;
+	color: #b58105;
 }
 table.wp-user-alerts .alert-severity-error {
-	color: red;
+	color: #e03997;
 }
 table.wp-user-alerts .alert-severity-critical {
-	color: darkorchid;
+	color: #6435c9;
 }
 table.wp-user-alerts .alert-severity-alert {
-	color: darkorange;
+	color: #f2711c;
 }
 table.wp-user-alerts .alert-severity-emergency {
-	color: darkred;
+	color: #db2828;
+}
+
+table.wp-user-alerts .alert-timestamp {
+	font-family: monospace;
+	font-size: 12px;
+}
+
+table.wp-user-alerts .alert-preview .panel {
+	padding: 15px;
+	margin: 0;
+	display: block;
+	border-radius: 5px;
+	transition: opacity .1s ease, color .1s ease, background .1s ease, box-shadow .1s ease;
+	border-radius: .28571429rem;
+	box-shadow: 0 0 0 1px rgba(34, 36, 38, .22) inset, 0 0 0 0 transparent;
+}
+
+table.wp-user-alerts .alert-preview .panel[data-severity="info"] {
+	color: #2185d0;
+	background-color: #dff0ff;	
+}
+
+table.wp-user-alerts .alert-preview .panel[data-severity="notice"] {
+	color: #1ebc30;
+	background-color: #e5f9e7;
+}
+
+table.wp-user-alerts .alert-preview .panel[data-severity="warning"] {
+	color: #b58105;
+	background-color: #fff8db;
+}
+
+table.wp-user-alerts .alert-preview .panel[data-severity="error"] {
+	color: #e03997;
+	background-color: #ffe3fb;
+}
+
+table.wp-user-alerts .alert-preview .panel[data-severity="critical"] {
+	color: #6435c9;
+	background-color: #eae7ff;
+}
+
+table.wp-user-alerts .alert-preview .panel[data-severity="alert"] {
+	color: #f2711c;
+	background-color: #ffedde;
+}
+
+table.wp-user-alerts .alert-preview .panel[data-severity="emergency"] {
+	color: #db2828;
+	background-color: #ffe8e6;
 }
