--- a/assets/css/user-alerts.css
+++ b/assets/css/user-alerts.css
@@ -41,7 +41,7 @@ table.wp-user-alerts tr:not(.broadcast) td {
 table.wp-user-alerts .alerts-picker {
 	height: 150px;
 	min-height: 150px;
-	max-height: 200px;
+	max-height: 250px;
 	overflow: auto;
 	padding: 0 0.9em;
 	border: solid 1px #dfdfdf;
@@ -98,7 +98,7 @@ table.wp-user-alerts #alert-excerpt .panel {
 
 table.wp-user-alerts #alert-excerpt .panel[data-priority="info"] {
 	color: #2185d0;
-	background-color: #dff0ff;	
+	background-color: #dff0ff;
 }
 
 table.wp-user-alerts #alert-excerpt .panel[data-priority="reminder"] {
@@ -119,6 +119,24 @@ table.wp-user-alerts #alert-excerpt .panel[data-priority="alert"] {
 table.wp-user-alerts #alert-excerpt .panel[data-priority="emergency"] {
 	color: #db2828;
 	background-color: #ffe8e6;
+}
+
+table.wp-user-alerts #alert-excerpt textarea.alert-excerpt {
+	width: 100%;
+	margin-top: 14px;
+	margin-bottom: 10px;
+	height: 62px;
+	resize: none;
+}
+
+.alert-excerpt-length {
+	position: absolute;
+	right: 0px;
+	top: 55px;
+	padding: 2px 8px;
+	font-size: 12px;
+	border: 1px solid #eee;
+	background-color: #fafafa;
 }
 
 .categorychecklist span.label {
