Update background color for people-first experiment.

--- a/assets/css/user-alerts.css
+++ b/assets/css/user-alerts.css
@@ -115,7 +115,7 @@ div.wp-user-alerts textarea.alert-message {
 	border-bottom: 1px solid #eee;
 	margin: 0 -25px;
 	padding: 0 25px;
-	background-color: #fdfdfd;
+	background-color: #fff;
 	line-height: 20px;
 }
 
